Fixed alignment on widescreen being offcentered to the left and add button element on header input inside the form

--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ html {
     scroll-behavior: smooth;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 h1, h2, h3, h4, h5, h6, span {
     color: #242424;
     line-height: 1.25;
@@ -108,12 +114,6 @@ NAV BAR
     font-weight: 600;
     font-size: 14px;
 }
-
-/* .nav__link:hover {
-    text-decoration: underline;
-    color: #6316FC;
-    transition: all 300ms ease;
-} */
 
 .link__hover-effect--purple:hover {
     color: #6316FC;
@@ -227,23 +227,6 @@ NAV BAR
       }
 }
 
-/* @keyframes slide-in-right {
-    0% {
-      transform: translateX(150%);
-      opacity: 0;
-    }
-
-    50% {
-        transform: translateX(0%);
-        opacity: 0;
-      }
-
-    100% {
-      transform: translateX(-150%);
-      opacity: 1;
-    }
-} */
-
 .menu__links {
     display: flex;
     flex-direction: column;
@@ -277,6 +260,9 @@ HEADER
 
 header {
     height: calc(100vh - 100px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header__container {
@@ -321,18 +307,47 @@ header {
     margin-bottom: 24px;
 }
 
+.email--border-mobile {
+    display: none;
+}
+
+.email--border {
+    border: 2px solid #A0AEBF;
+    border-radius: 40px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 600px;
+    height: 70px;
+}
+
 .header__form--input {
-    border-color: #A0AEBF;
+    border-color: #a0aebf00;
     color: #A0AEBF;
     padding: 24px;
     border-radius: 40px;
     width: 60%;
-    margin-bottom: 56px;
     font-weight: 700;
+    background-color: #ffffff00;
+    flex: 1;
+    outline: none;
+}
+
+.btn__email--signup {
+    background-color: #6316FC;
+    color: white;
+    padding: 22px 40px;
+    border-radius: 40px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    margin: 3px;
 }
 
 .header__form--input:hover {
-    border-color: #6316FC;
+    border-color: #6316fc00;
     transition: all 500ms ease;
 }
 
@@ -1028,7 +1043,7 @@ FAQs
 }
 
 .faq__wrapper {
-    width: 65%;
+    width: 100%;
 }
 
 .faq__accordion {
@@ -1256,10 +1271,6 @@ footer {
         align-items: flex-start;
     }
 
-    .header__form--input {
-        margin-bottom: 20px;
-    }
-
     .price-plan__wrapper {
         display: flex;
         flex-wrap: wrap;
@@ -1415,14 +1426,46 @@ footer {
 
 /* SMART PHONES, TABLETS, LARGE SMARTPHONES */
 @media (max-width: 640px) {
-    .header__email--signup {
+    .email--border {
+        display: none;
+    }
+
+    .email--border-mobile {
+        display: block;
+    }
+
+    .header__email--signup-mobile {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    .header__form--input {
+    /* .header__form--input {
         width: 90%;
+    } */
+
+    .header__form--input-mobile {
+        border-color: #A0AEBF;
+        color: #A0AEBF;
+        padding: 24px;
+        border-radius: 40px;
+        width: 60%;
+        /* margin-bottom: 56px; */
+        font-weight: 700;
+        width: 100%;
+    }
+
+    .btn__email--signup-mobile {
+        background-color: #6316FC;
+        color: white;
+        padding: 22px 40px;
+        border-radius: 40px;
+        border: none;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 700;
+        margin: 25px 0;
+        width: 100%;
     }
 
     .btn--big {
